# mcpfind

./: .gitignore  CLAUDE.md  LICENSE  README.md  mcplens.toml.example  pyproject.toml
.github/workflows/: black.yml  build.yml  ruff.yml
benchmarks/tau-bench/: README.md  run.py  tasks.json  tools.py
src/mcpfind/: __init__.py  cli.py  config.py  install.py  models.py  setup.py
src/mcpfind/backend/: connection.py  discovery.py  manager.py
src/mcpfind/index/: cache.py  embeddings.py  mfu.py  vector.py
src/mcpfind/proxy/: router.py  server.py  tools.py
src/mcplens/: __init__.py  cli.py  config.py  models.py
src/mcplens/backend/: connection.py  discovery.py  manager.py
src/mcplens/index/: embeddings.py  vector.py
src/mcplens/proxy/: router.py  server.py  tools.py
tests/: test_cache.py  test_config.py  test_mfu.py  test_router.py  test_vector.py
