[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpfind"
version = "0.1.1"
description = "Context-efficient MCP tool proxy with semantic search"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "fastembed",
    "numpy",
    "click",
    "tomli",
]

[project.optional-dependencies]
openai = ["openai"]

[project.scripts]
mcpfind = "mcpfind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpfind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]
